# commitiq

./: LICENSE  README.md  commitiq.yml  pyproject.toml
src/commitiq/: __init__.py  cli.py
src/commitiq/ai/: summarizer.py
src/commitiq/config/: __init__.py  manager.py
src/commitiq/gitx/: __init__.py  gitx.py
src/commitiq/mcp_server/: server.py
src/commitiq/repo/: repository.py
src/config/: config.py
src/gitx/: gitx.py
